# ogre-ssr

./: .gitignore  CMakeLists.txt  LICENSE.txt  SinbadExample.cpp  SinbadExample.hpp  main.cpp  ssr_compositor.cpp  ssr_compositor.hpp  ssr_logic.cpp  ssr_logic.hpp
media/: ssr.compositor  ssr.material
media/ssr/: ssr_output_normal_depth_rough_fp.glsl  ssr_output_normal_depth_rough_vp.glsl  ssr_output_raytrace_fp.glsl  ssr_output_raytrace_vp.glsl
